--- a/frameworkTest/css/main.scss
+++ b/frameworkTest/css/main.scss
@@ -1,5 +1,6 @@
 @import '../../assets/simplistic.css';
 
+
 .social-icons{
     i {
         color:gray;
@@ -36,7 +37,7 @@
 .footer-item {
 	
     h6{
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 900;
     }
 
@@ -63,4 +64,9 @@
      } 
 
 }
+
+.mailer{
+	max-width: 100px;
+}
+
 
